// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HR passes snapshot tests 1`] = `
<View
  style={
    Array [
      Object {
        "height": undefined,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "space-evenly",
      },
    ]
  }
>
  Test1
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingLeft": "20%",
        "paddingRight": "20%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "flex": 1,
            "height": 1,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#fff",
          "flex": 0.3,
          "textAlign": "center",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "flex": 1,
            "height": 1,
          },
        ]
      }
    />
  </View>
  Test2
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingLeft": "20%",
        "paddingRight": "20%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "flex": 1,
            "height": 1,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#fff",
          "flex": 0.3,
          "textAlign": "center",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "flex": 1,
            "height": 1,
          },
        ]
      }
    />
  </View>
  Test3
</View>
`;

exports[`SpacedView passes snapshot tests 1`] = `
<View
  style={
    Array [
      Object {
        "height": undefined,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "space-evenly",
      },
    ]
  }
>
  Testing
</View>
`;
